Source/WebCore/platform/graphics/avfoundation/AudioVideoRendererAVFObjC.h
@@ -213,6 +213,12 @@ private:
 #endif
 
     void setSynchronizerRate(float, std::optional<MonotonicTime>);
+    // Returns the rate we last passed to [m_synchronizer setRate:]. Cached
+    // because [m_synchronizer rate] is heavy (dispatch_sync), and querying
+    // it can interact poorly with AVF's internal serialization of rate
+    // changes. The cached value reflects the rate we set, not the actual
+    // timebase rate.
+    float synchronizerRate() const { return m_lastSetSyncRate; }
     bool updateLastPixelBuffer();
     void maybePurgeLastPixelBuffer();
     void setNeedsPlaceholderImage(bool);
@@ -282,6 +288,10 @@ private:
 
     bool m_isPlaying { false };
     double m_rate { 1 };
+    // Cached value of the rate last passed to [m_synchronizer setRate:].
+    // Avoid querying [m_synchronizer rate] (heavy dispatch_sync) — read this
+    // via synchronizerRate() instead.
+    float m_lastSetSyncRate { 0 };
     RetainPtr<CVPixelBufferRef> m_lastPixelBuffer;
     bool m_needsPlaceholderImage { false };
 
